<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mi_perfil"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/mi_perfil" />
        <item
            android:id="@+id/recomendaciones"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/recomendaciones" />
        <item
            android:id="@+id/configuracion"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/actualizar" />

    </group>

    <item android:title="@string/ejercicios">
        <menu>
            <item
                android:id="@+id/abdomen"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/abdomen" />
            <item
                android:id="@+id/antebrazo"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/antebrazo" />

            <item
                android:id="@+id/biceps"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/biceps" />

            <item
                android:id="@+id/espalda"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/espalda" />
            <item
                android:id="@+id/hombros"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/hombros" />
            <item
                android:id="@+id/pantorrilla"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/pantorrilla" />
            <item
                android:id="@+id/pecho"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/pecho" />
            <item
                android:id="@+id/pierna"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/pierna" />
            <item
                android:id="@+id/triceps"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/triceps" />
        </menu>
    </item>

    <item android:title="@string/mas">
        <menu>
            <item
                android:id="@+id/acerca_de"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/acerca_de" />
            <item
                android:id="@+id/cerrar_sesion"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
