<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrador.focus.FragmentConfiguracion">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ingresar_altura"/>

                <EditText
                    android:id="@+id/user_height"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ingresar_peso"/>

                <EditText
                    android:id="@+id/user_width"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/imc"/>

                <EditText
                    android:id="@+id/user_bmi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-----"
                    android:enabled="false"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/selecciona_somatotipo"
                android:padding="10dp"
                android:background="@color/colorAccent"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/button_ectomorfo"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:background="@drawable/ectomorfo"
                        android:clickable="true"/>

                    <CheckBox
                        android:id="@+id/check_ectomorfo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:text="@string/ectoformo"
                        android:textStyle="italic"
                        android:textSize="9dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/button_mesomorfo"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:background="@drawable/mesomorfo"
                        android:padding="5dp"/>

                    <CheckBox
                        android:id="@+id/check_mesomorfo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:text="@string/mesomorfo"
                        android:textStyle="italic"
                        android:textSize="9dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/button_endomorfo"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/endomorfo" />

                    <CheckBox
                        android:id="@+id/check_endomorfo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:text="@string/endomorfo"
                        android:textStyle="italic"
                        android:textSize="9dp"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/netx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continuar"/>
        </LinearLayout>
    </ScrollView>


</FrameLayout>
